feature: v0.8.2 - CPO image endpoints (like cards) - CPO image importer - docs enter CPO image endpoints - group images folder into a separate "images" folder - remove admin endpoint for getting images by name - generic image importer trait - update dockerfile - bump up deps
