# src/image_import.rs
@@ -1,8 +1,9 @@
-use std::path::PathBuf;
+use std::path::{Path, PathBuf};
 
 use crate::{
     db::{
-        card_image::{self, delete_marked, CardImage, CardImageContext},
+        cpo,
+        image::{self, delete_marked, Image, ImageContext},
         tariff,
     },
     importer, io,
@@ -10,24 +11,131 @@ use crate::{
     state::State,
 };
 
+use axum::async_trait;
 use hotwatch::{
     blocking::{Flow, Hotwatch},
     Event,
 };
 use once_cell::sync::Lazy;
-use sqlx::{pool::PoolConnection, Pool, Postgres};
+use sqlx::{pool::PoolConnection, Acquire, Pool, Postgres, Transaction};
 use tokio::fs;
 
 static REGEX_FILENAME: Lazy<regex::Regex> = Lazy::new(|| {
-    regex::RegexBuilder::new(r#"^(?:card_)*([a-zA-Z0-9-._ß]+)\.(?:jpg|jpeg|png|svg|gif)$"#)
-        .case_insensitive(true)
-        .build()
-        .unwrap()
+    regex::RegexBuilder::new(
+        r#"^(?:card_|cpo_){0,1}([a-zA-Z0-9-._ß+]+)\.(?:jpg|jpeg|png|svg|gif)$"#,
+    )
+    .case_insensitive(true)
+    .build()
+    .unwrap()
 });
 
-pub async fn import_folder(state: &State) -> Result<(), eyre::Error> {
+static CARDS_FOLDER: Lazy<PathBuf> = Lazy::new(|| PathBuf::from("./images/cards"));
+
+static CPOS_FOLDER: Lazy<PathBuf> = Lazy::new(|| PathBuf::from("./images/cpos"));
+
+pub struct CardFolder<'a> {
+    folder_parent: &'a Path,
+}
+
+#[async_trait]
+impl ImageImport for CardFolder<'_> {
+    fn new() -> Self {
+        Self {
+            folder_parent: CARDS_FOLDER.as_path(),
+        }
+    }
+
+    async fn get_id_by_name(
+        &self,
+        connection: &mut PoolConnection<Postgres>,
+        filename: &str,
+    ) -> Result<i32, eyre::Error> {
+        tariff::get_by_name(connection, &filename)
+            .await
+            .map_err(|_e| {
+                eyre::Error::msg(format!(
+                    r#"Tariff for filename "{}" was not recognized"#,
+                    filename
+                ))
+            })
+    }
+    async fn set_image_id(
+        &self,
+        transaction: &mut Transaction<'_, Postgres>,
+        image_id: Option<i32>,
+        id: i32,
+    ) -> Result<(), sqlx::Error> {
+        tariff::set_image(transaction, id, image_id).await
+    }
+
+    fn folder_parent(&self) -> &Path {
+        self.folder_parent
+    }
+}
+
+pub struct CpoFolder<'a> {
+    folder_parent: &'a Path,
+}
+
+#[async_trait]
+impl ImageImport for CpoFolder<'_> {
+    fn new() -> Self {
+        Self {
+            folder_parent: CPOS_FOLDER.as_path(),
+        }
+    }
+
+    async fn get_id_by_name(
+        &self,
+        connection: &mut PoolConnection<Postgres>,
+        filename: &str,
+    ) -> Result<i32, eyre::Error> {
+        cpo::get_by_pub_id_or_name(connection, &filename)
+            .await
+            .ok_or_else(|| {
+                eyre::Error::msg(format!(
+                    r#"CPO for filename "{}" was not recognized"#,
+                    filename
+                ))
+            })
+    }
+    async fn set_image_id(
+        &self,
+        transaction: &mut Transaction<'_, Postgres>,
+        image_id: Option<i32>,
+        id: i32,
+    ) -> Result<(), sqlx::Error> {
+        cpo::set_image(transaction, id, image_id).await
+    }
+
+    fn folder_parent(&self) -> &Path {
+        self.folder_parent
+    }
+}
+#[async_trait]
+pub trait ImageImport {
+    fn new() -> Self;
+    async fn get_id_by_name(
+        &self,
+        connection: &mut PoolConnection<Postgres>,
+        name: &str,
+    ) -> Result<i32, eyre::Error>;
+    async fn set_image_id(
+        &self,
+        transaction: &mut Transaction<'_, Postgres>,
+        image_id: Option<i32>,
+        id: i32,
+    ) -> Result<(), sqlx::Error>;
+
+    fn folder_parent(&self) -> &Path;
+}
+
+pub async fn import_folder<T>(state: &State, image_importer: T) -> Result<(), eyre::Error>
+where
+    T: ImageImport,
+{
     let mut connection = state.database_pool.acquire().await?;
-    let folder = &state.config.image_folder;
+    let folder = image_importer.folder_parent();
     if !folder.exists() {
         tokio::fs::create_dir(folder).await?;
         tracing::info!("Creating folder {}", folder.to_string_lossy());
@@ -45,16 +153,16 @@ pub async fn import_folder(state: &State) -> Result<(), eyre::Error> {
     while let Some(entry) = dir.next_entry().await? {
         let file = entry.file_name();
         let filename = file.to_str().unwrap_or_default();
-        if REGEX_FILENAME.is_match(&filename) {
-            let path = &entry.path().canonicalize()?;
-            // TODO Maybe do no import every image into a separate transaction?
-
-            if let Err(error) = insert_or_update(&mut connection, path).await {
-                let message = format!("Ignoring image filename {filename}, error: {error}");
-                tracing::warn!(message);
-                errors.push(message);
-            };
+        if !REGEX_FILENAME.is_match(&filename) {
+            continue;
         }
+        let path = &entry.path().canonicalize()?;
+
+        if let Err(error) = insert_or_update(&mut connection, path, &image_importer).await {
+            let message = format!("Ignoring image filename {filename}, error: {error}");
+            tracing::warn!(message);
+            errors.push(message);
+        };
     }
     if !errors.is_empty() && cfg!(release_assertions) {
         let slack = &state.slack;
@@ -64,7 +172,69 @@ pub async fn import_folder(state: &State) -> Result<(), eyre::Error> {
             .await;
     }
 
-    tracing::info!("Image import has finished");
+    tracing::info!("Image import done for folder: {} ", folder.display());
+    Ok(())
+}
+
+async fn insert_or_update<T>(
+    connection: &mut PoolConnection<Postgres>,
+    new_path: &PathBuf,
+    importer: &T,
+) -> Result<(), eyre::Error>
+where
+    T: ImageImport,
+{
+    let raw_filename = new_path
+        .file_name()
+        .ok_or_else(|| eyre::Error::msg("Unsupported filename"))?
+        .to_string_lossy();
+
+    let mime = crate::io::guess_image_mime(new_path).await?;
+
+    let filename = parse_filename(&raw_filename)?;
+
+    let id = importer
+        .get_id_by_name(connection, &filename)
+        .await
+        .map_err(|_e| {
+            eyre::Error::msg(format!(
+                r#"Tariff for filename "{}" was not recognized"#,
+                filename
+            ))
+        })?;
+
+    let checksum = hash_file(new_path).await?;
+    let meta = fs::metadata(new_path).await?;
+
+    tracing::debug!(
+        msg = "Inserting new or update image",
+        id,
+        checksum=?checksum,
+        new=?new_path.file_name().unwrap_or_default(),
+        filename=?filename
+    );
+
+    let image_context = ImageContext {
+        source_id: id,
+        image: Image {
+            file_path: new_path.clone(),
+            checksum,
+            mime,
+        },
+        filename,
+        updated: meta.modified()?.into(),
+    };
+
+    let mut transaction = connection.begin().await?;
+
+    let image_id = image::insert_or_update(&mut transaction, &image_context).await?;
+
+    importer
+        .set_image_id(&mut transaction, image_id, id)
+        .await?;
+
+    transaction.commit().await?;
+
     Ok(())
 }
 
@@ -82,10 +252,10 @@ pub fn cleanup_task(state: State) {
     });
 }
 
-pub fn watch_folder(state: State) -> Result<(), eyre::Error> {
+pub fn watch_cards_folder(state: State) -> Result<(), eyre::Error> {
     cleanup_task(state.clone());
     tokio::task::spawn_blocking(move || {
-        let folder = state.config.image_folder.clone();
+        let folder = CARDS_FOLDER.as_path();
         let mut hotwatch = Hotwatch::new().expect("hotwatch failed to initialize");
         tracing::info!(
             "Start watching {} folder for watching",
@@ -96,7 +266,7 @@ pub fn watch_folder(state: State) -> Result<(), eyre::Error> {
                 let state = state.clone();
                 tokio::task::spawn(async move {
                     let slack = &state.slack;
-                    let ret = handle_fs_event(event, &slack, &state.database_pool).await;
+                    let ret = handle_card_fs_event(event, &slack, &state.database_pool).await;
                     if let Err(err) = ret {
                         // TODO error pretty print
                         tracing::warn!(msg = "While watching the folder", err = ?err);
@@ -112,7 +282,8 @@ pub fn watch_folder(state: State) -> Result<(), eyre::Error> {
 
     Ok(())
 }
-async fn handle_fs_event(
+
+async fn handle_card_fs_event(
     event: Event,
     slack: &Option<Slack>,
     database_pool: &Pool<Postgres>,
@@ -125,10 +296,10 @@ async fn handle_fs_event(
             match detect_rename(&mut connection, &path).await {
                 Some(old_path) => {
                     tracing::info!(msg = "File is already known. It will be renamed", old=?old_path, new=?path);
-                    update_path(&mut connection, &old_path, &path, slack).await?;
+                    rename_path(&mut connection, &old_path, &path, slack).await?;
                 }
                 None => {
-                    insert_or_update(&mut connection, &path).await?;
+                    insert_or_update(&mut connection, &path, &CardFolder::new()).await?;
                     let msg = &format!(
                         "New card image filename: {:#?}",
                         path.file_name().unwrap_or_default()
@@ -141,12 +312,12 @@ async fn handle_fs_event(
         Event::Rename(old_path, new_path) if io::is_file(&new_path).await? => {
             tracing::info!(event = "Event::Rename", old=?old_path, new=?new_path);
             let mut connection = database_pool.acquire().await?;
-            update_path(&mut connection, &old_path, &new_path, slack).await?;
+            rename_path(&mut connection, &old_path, &new_path, slack).await?;
         }
         Event::Remove(path) => {
             tracing::info!(event = "Event::Remove", ?path);
             let mut connection = database_pool.acquire().await?;
-            card_image::soft_delete(&mut connection, &path).await?
+            image::soft_delete(&mut connection, &path).await?
         }
         Event::Error(error, path) => {
             slack
@@ -162,7 +333,7 @@ async fn handle_fs_event(
     Ok(())
 }
 
-async fn update_path(
+async fn rename_path(
     connection: &mut PoolConnection<Postgres>,
     old_path: &PathBuf,
     new_path: &PathBuf,
@@ -184,7 +355,7 @@ async fn update_path(
         filename=?filename
     );
 
-    card_image::update_name_path(connection, old_path, new_path, &filename).await?;
+    image::update_name_path(connection, old_path, new_path, &filename).await?;
 
     slack
         .send(
@@ -196,55 +367,6 @@ async fn update_path(
             ),
         )
         .await;
-    Ok(())
-}
-
-async fn insert_or_update(
-    connection: &mut PoolConnection<Postgres>,
-    new_path: &PathBuf,
-) -> Result<(), eyre::Error> {
-    let raw_filename = new_path
-        .file_name()
-        .ok_or_else(|| eyre::Error::msg("Unsupported filename"))?
-        .to_string_lossy();
-
-    let mime = crate::io::guess_image_mime(new_path).await?;
-
-    let filename = parse_filename(&raw_filename)?;
-
-    let tariff_id = tariff::get_by_name(connection, &filename)
-        .await
-        .map_err(|_e| {
-            eyre::Error::msg(format!(
-                r#"Tariff for filename "{}" was not recognized"#,
-                filename
-            ))
-        })?;
-
-    let checksum = hash_file(new_path).await?;
-    let meta = fs::metadata(new_path).await?;
-
-    tracing::debug!(
-        msg = "Inserting new or update image",
-        tariff_id=tariff_id,
-        checksum=?checksum,
-        new=?new_path.file_name().unwrap_or_default(),
-        filename=?filename
-    );
-
-    let card_image = CardImageContext {
-        tariff_id,
-        image: CardImage {
-            file_path: new_path.clone(),
-            checksum,
-            mime,
-        },
-        filename,
-        updated: meta.modified()?.into(),
-    };
-
-    card_image::insert_or_update(connection, &card_image).await?;
-
     Ok(())
 }
 
@@ -272,8 +394,6 @@ async fn detect_rename(
 ) -> Option<PathBuf> {
     let checksum = hash_file(path).await.ok()?;
 
-    let card_image = card_image::get_by_checksum(connection, &checksum)
-        .await
-        .ok();
+    let card_image = image::get_by_checksum(connection, &checksum).await.ok();
     card_image.map(|card| card.file_path)
 }
